--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.5.6'
-  id 'org.owasp.dependencycheck' version '6.5.3'
+  id 'org.springframework.boot' version '2.6.7'
+  id 'org.owasp.dependencycheck' version '7.1.0.1'
   id 'com.github.ben-manes.versions' version '0.38.0'
   id 'org.sonarqube' version '3.3'
   id 'idea'
@@ -291,10 +291,10 @@ ext {
 def versions = [
   springfoxSwagger  : '3.0.0',
   s2sClient         : '4.0.0',
-  springCloudStarterBootstrap : '3.0.4',
+  springCloudStarterBootstrap : '3.1.1',
   springdocOpenApiUI: '1.6.6',
   comGithubHmctsJavaLogging: '6.0.1',
-  jackson: '2.12.4',
+  jackson: '2.13.2',
   jacksonBom: '2.13.2.20220324',
   reformsJavaLogging: '5.1.7',
   lombok            : '1.18.20',
@@ -303,7 +303,8 @@ def versions = [
   awaitility        : '1.7.0',
   springBoot        : '2.6.5',
   serenityCoreVersion: '3.0.2',
-  ccdCaseDocumentAmClient      : '1.7.3'
+  ccdCaseDocumentAmClient      : '1.7.3',
+  springCloud: '3.1.1'
 ]
 
 ext.libraries = [
@@ -322,8 +323,13 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
+  //{
+   //exclude  group: 'com.fasterxml.jackson.datatype', module: 'jackson-datatype-jsr310:2.13.2'
+  //}
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
+  implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+  implementation group: 'io.springfox', name: 'springfox-spring-webflux', version: '3.0.0'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
   implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.17.2-RELEASE'
   implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformsJavaLogging
@@ -336,22 +342,33 @@ dependencies {
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.comGithubHmctsJavaLogging
 
-  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2.2'
   implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: versions.jacksonBom, ext: 'pom'
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: versions.jackson
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: versions.jackson
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
-  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.45'
+  implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.62'
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: versions.springCloudStarterBootstrap
   implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.s2sClient
   implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '3.0.10'
-  implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.17.0'
+  implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.14.0'
   implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.2-Categories'
   implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.2'
-  implementation group: 'org.springframework', name: 'spring-aspects', version: '5.3.16'
+  implementation group: 'org.springframework', name: 'spring-aspects', version: '5.3.19'
+  implementation group: 'io.cucumber', name: 'cucumber-java', version: '7.3.3'
+  implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.21'
+  implementation group: 'org.apache.poi', name: 'poi', version: '5.2.2'
+  implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.2'
+  implementation(group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: versions.springCloud)
+    {
+      exclude group: 'io.reactivex', module: 'io.reactivex'
+      exclude group: 'io.reactivex', module: 'rxnetty'
+      exclude group: 'io.reactivex', module: 'rxnetty-contexts'
+      exclude group: 'io.reactivex', module: 'rxnetty-servo'
+    }
 
   implementation 'org.projectlombok:lombok:1.18.18'
   compileOnly "org.projectlombok:lombok:1.18.18"
@@ -382,7 +399,7 @@ dependencies {
 
   testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.22.0'
   testImplementation group: 'org.assertj', name: 'assertj-guava', version: '3.4.0'
-  testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner', version: '3.1.1'
+  testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-contract-stub-runner', version: '3.0.4'
 
   testImplementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
@@ -402,9 +419,9 @@ dependencies {
   functionalTestImplementation group: 'uk.gov.hmcts.reform', name: 'document-management-client', version: '7.0.0'
   functionalTestImplementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.s2sClient
 
-  smokeTestCompile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.1'
+  smokeTestCompile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2'
 
-  smokeTestImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0'
+  smokeTestImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.2'
 
   smokeTestCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
   smokeTestCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: versions.junitJupiter
@@ -603,5 +620,5 @@ rootProject.tasks.named("processSmokeTestResources") {
 }
 
 wrapper {
-    distributionType = Wrapper.DistributionType.ALL
+  distributionType = Wrapper.DistributionType.ALL
 }
