--- a/build.gradle
+++ b/build.gradle
@@ -328,8 +328,8 @@ dependencies {
   //}
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
-  implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
-  implementation group: 'io.springfox', name: 'springfox-spring-webflux', version: '3.0.0'
+  implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
+  implementation group: 'io.springfox', name: 'springfox-spring-webflux', version: versions.springfoxSwagger
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.10.RELEASE'
   implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.17.2-RELEASE'
   implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformsJavaLogging
@@ -354,7 +354,7 @@ dependencies {
   implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.s2sClient
   implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   implementation group: 'com.github.hmcts', name: 'send-letter-client', version: '3.0.10'
-  implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.14.0'
+  implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.17.3'
   implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.2-Categories'
   implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.2'
   implementation group: 'org.springframework', name: 'spring-aspects', version: '5.3.19'
