--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -90,3 +90,6 @@ core_case_data:
   api:
     url: ${CASE_DATA_STORE_BASEURL:http://ccd-data-store-api-aat.service.core-compute-aat.internal}
 
+case_document_am:
+  url: ${CCD_CASE_DOCS_AM_API:http://ccd-case-document-am-api-aat.service.core-compute-aat.internal}
+
