--- a/charts/fis-cos-api/Chart.yaml
+++ b/charts/fis-cos-api/Chart.yaml
@@ -8,10 +8,10 @@ maintainers:
   - name: HMCTS fis team
 dependencies:
   - name: java
-    version: 3.7.6
-    repository: '@hmctspublic'
+    version: 3.7.7
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
   - name: ccd
-    version: 6.0.0
-    repository: '@hmctspublic'
+    version: 7.1.0
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     tags:
         - ccd-idam-pr
