--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -1,5 +1,16 @@
 server:
-  port: 8099
+  port: 4044
+
+runs-locally: ${RUNS_LOCALLY:true}
+
+env: ${test_environment:local}
+TEST_URL: http://localhost:8099
+
+case:
+  orchestration:
+    service:
+      base:
+        uri: '#{environment["TEST_URL"].replaceFirst("https://", "http://")}'
 
 management:
   endpoint:
@@ -81,7 +92,11 @@ idam:
     secret: ${S2S_SECRET:XXXXXXXX}
     microservice: fis_cos_api
   api:
-    url: ${IDAM_API_BASEURL:http://localhost:5000}
+    url: https://idam-api.aat.platform.hmcts.net
+  client:
+    id: 'ds-ui'
+    secret: ${OAUTH2_CLIENT_SECRET:AAAAAA}
+    redirect_uri: ${IDAM_API_REDIRECT_URL:http://localhost:3000/oauth2/callback}
   systemupdate:
     username: ${IDAM_SYSTEM_UPDATE_USERNAME:dummysystemupdate@test.com}
     password: ${IDAM_SYSTEM_UPDATE_PASSWORD:dummy}
@@ -93,3 +108,5 @@ core_case_data:
 case_document_am:
   url: ${CCD_CASE_DOCS_AM_API:http://ccd-case-document-am-api-aat.service.core-compute-aat.internal}
 
+document_management:
+  url: ${DOCUMENT_MANAGEMENT_URL:http://dm-store-aat.service.core-compute-aat.internal}
