--- a/charts/fis-cos-api/Chart.yaml
+++ b/charts/fis-cos-api/Chart.yaml
@@ -16,7 +16,7 @@ dependencies:
     tags:
       - ccd-idam-pr
   - name: xui-webapp
-    version: ~0.2.1
+    version: 0.2.32
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: xui-webapp.enabled
 
