--- a/charts/fis-cos-api/Chart.yaml
+++ b/charts/fis-cos-api/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: "1.0"
 description: A Helm chart for fis-cos-api App
 name: fis-cos-api
 home: https://github.com/hmcts/fis-cos-api
-version: 0.0.7
+version: 0.0.8
 maintainers:
   - name: HMCTS fis team
 dependencies:
@@ -11,13 +11,11 @@ dependencies:
     version: 3.7.7
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
   - name: ccd
-    version: 7.1.0
+    version: v8.0.4-PRE
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     tags:
       - ccd-idam-pr
   - name: xui-webapp
-    version: 0.2.32
+    version: ~0.2.1
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: xui-webapp.enabled
-
-
