--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -14,7 +14,6 @@ management:
 springdoc:
   packagesToScan: uk.gov.hmcts.reform.cosapi.controllers
 
-#If you use a database then uncomment below lines and update db properties accordingly
 spring:
   config:
     import: "optional:configtree:/mnt/secrets/fis/"
@@ -25,20 +24,25 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
-  servlet:
-    multipart:
-      max-file-size: 30MB
-      max-request-size: 30MB
 
 azure:
   application-insights:
     instrumentation-key: ${AppInsightsInstrumentationKey:00000000-0000-0000-0000-000000000000}
 
+uk:
+  gov:
+    notify:
+      api:
+        key: ${UK_GOV_NOTIFY_API_KEY:dummy}
+        baseUrl: https://api.notifications.service.gov.uk
+        templates:
+          english:
+          welsh:
 
 idam:
   s2s-auth:
-    url: ${SERVICE_AUTH_PROVIDER_URL:http://rpe-service-auth-provider-aat.service.core-compute-aat.internal}
-    secret: ${S2S_SECRET:XXXXXXXX}
+    url: ${SERVICE_AUTH_PROVIDER_URL:http://localhost:4552}
+    secret: ${S2S_SECRET:AAAAAAAAAAAAAAAA}
     microservice: fis_cos_api
   api:
     url: ${IDAM_API_BASEURL:http://localhost:5000}
@@ -52,23 +56,3 @@ core_case_data:
 
 case_document_am:
   url: ${CCD_CASE_DOCS_AM_API:http://ccd-case-document-am-api-aat.service.core-compute-aat.internal}
-
-caseinfo:
-  apps:
-    - caseType: PRLAPPS
-      jurisdiction: PRIVATELAW
-      eventIds:
-        createEvent: citizen-prl-create-dss-application
-        updateEvent: citizen-prl-update-dss-application
-        submitEvent: citizen-prl-submit-dss-application
-      caseTypeOfApplication:
-        - FMPO
-        - FGM
-    - caseType: ADOPTION
-      jurisdiction: ADOPTION
-      eventIds:
-        createEvent: citizen-adop-create-dss-application
-        updateEvent: citizen-adop-update-dss-application
-        submitEvent: citizen-adop-submit-dss-application
-      caseTypeOfApplication:
-        - RELADOP
