--- a/src/smokeTest/resources/application.yaml
+++ b/src/smokeTest/resources/application.yaml
@@ -14,6 +14,18 @@ management:
 springdoc:
   packagesToScan: uk.gov.hmcts.reform.cosapi.controllers
 
+
+runs-locally: ${RUNS_LOCALLY:true}
+
+  env: ${test_environment:local}
+  test.url: http://localhost:8090
+
+  case:
+    orchestration:
+      service:
+        base:
+          uri: '#{environment["TEST_URL"].replaceFirst("https://", "http://")}'
+
 #If you use a database then uncomment below lines and update db properties accordingly
 spring:
   config:
