--- a/build.gradle
+++ b/build.gradle
@@ -674,11 +674,11 @@ task contract(type: Test, description: 'Runs the consumer Pact tests.', group: '
   environment("APPINSIGHTS_INSTRUMENTATIONKEY", "test-key")
 }
 
-task runAndPublishConsumerPactTests(type: Test){
-  logger.lifecycle("Runs pact Tests")
-  testClassesDirs = sourceSets.contractTest.output.classesDirs
-  classpath = sourceSets.contractTest.runtimeClasspath
-}
+//task runAndPublishConsumerPactTests(type: Test){
+//  logger.lifecycle("Runs pact Tests")
+//  testClassesDirs = sourceSets.contractTest.output.classesDirs
+//  classpath = sourceSets.contractTest.runtimeClasspath
+//}
 
 runAndPublishConsumerPactTests.dependsOn contract
 
