--- a/build.gradle
+++ b/build.gradle
@@ -260,6 +260,7 @@ dependencyManagement {
 
 // https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
 dependencyCheck {
+  autoUpdate = true
   failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
   suppressionFile = 'config/owasp/suppressions.xml'
   outputDirectory = 'build/reports/'
