--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.6.7'
+  id 'org.springframework.boot' version '2.6.8'
   id 'org.owasp.dependencycheck' version '7.3.0'
   id 'com.github.ben-manes.versions' version '0.41.0'
   id 'org.sonarqube' version '3.3'
@@ -289,6 +289,7 @@ repositories {
 
 ext {
   log4JVersion = "2.17.0"
+  set('snakeyaml.version', '1.33')
 }
 
 def versions = [
